asp net workaround

--- a/InterviewTests/InterviewTests.csproj
+++ b/InterviewTests/InterviewTests.csproj
@@ -23,6 +23,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\InterviewEntityFramework\InterviewEntityFramework.csproj" />
     <ProjectReference Include="..\InterviewWorkAround\InterviewWorkAround.csproj" />
   </ItemGroup>
 
